--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 
 <script>
 
+let choice = ["Rock", "Paper", "Scissors"]
 
-    
+function getComputerChoice(choice) {
+    return choice[Math.floor(Math.random() * choice.length)];
+}
+
+console.log(getComputerChoice(choice))
+
+
+
 </script>
 
 </html>emoji
