Add prompt for player choice and define constants
Define computerSelection as constant of getComputerChoice(choice).

Add function to capitalize first letter of string so player choice parameter is case-insensitive.

Add expression for prompt asking for player's choice.

Define playerSelection as constant of capitalize(getPlayerChoice).

--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
 
 let choice = ["Rock", "Paper", "Scissors"]
 
-function getComputerChoice(choice) {
+function getComputerChoice() {
     return choice[Math.floor(Math.random() * choice.length)];
 }
+const computerSelection = getComputerChoice(choice);
 
-console.log(getComputerChoice(choice))
+console.log(computerSelection)
 
+
+function capitalize(string) {
+    return string.charAt(0).toUpperCase() + string.slice(1).toLowerCase();
+}
+
+let getPlayerChoice = prompt("What do you choose?",);
+
+const playerSelection = capitalize(getPlayerChoice)
+
+console.log(playerSelection)
+
+function playRound(playerSelection, computerSelection) {
+}
 
 
 </script>
 
-</html>emoji
+</html>
