--- a/index.html
+++ b/index.html
@@ -9,45 +9,14 @@
 
 <script>
 
-let choice = ["Rock", "Paper", "Scissors"]
+let choice = ["ROCK", "PAPER", "SCISSORS"];
 
 function getComputerChoice() {
     return choice[Math.floor(Math.random() * choice.length)];
 }
 const computerSelection = getComputerChoice(choice);
 
-function capitalize(string) {
-    return string.charAt(0).toUpperCase() + string.slice(1).toLowerCase();
-}
-
-let getPlayerChoice = prompt("What do you choose?",);
-
-const playerSelection = capitalize(getPlayerChoice)
-
-
 console.log(computerSelection)
-console.log(playerSelection)
-
-function playRound(playerSelection, computerSelection) {
-    if (computerSelection === playerSelection) {
-        result = "It's a tie!";
-    } else if (computerSelection === "Rock" && playerSelection === "Paper") {
-        result = "You win! Paper beats Rock!";
-    } else if (computerSelection === "Paper" && playerSelection === "Scissors") {
-        result = "You win! Scissors beats Paper!";
-    } else if (computerSelection === "Paper" && playerSelection === "Rock") {
-        result = "You lose! Paper beats Rock!";
-    } else if (computerSelection === "Scissors" && playerSelection === "Paper") {
-        result = "You lose! Scissors beats Paper!";
-    } else if (computerSelection === "Scissors" && playerSelection === "Rock") {
-        result = "You win! Rock beats Scissors!";
-    } else if (computerSelection === "Rock" && playerSelection === "Scissors") {
-        result = "You lose! Rock beats Scissors!"; 
-    } return result;
-}
-
-
-console.log(playRound(playerSelection, computerSelection))
 
 </script>
 
