--- a/index.html
+++ b/index.html
@@ -5,10 +5,38 @@
 <head>
     <meta charset="UTF-8">
     <title>🪨! 📝! ✂️!</title>
+    <link rel="stylesheet" href="style.css">
     <script src="js-file.js" defer></script>
 </head>
 
 <body> 
+
+<div class="container">
+
+  <div class="left"> 
+    <img id="choices" src="/img/choices.png"/>
+    <img id="leftPaper" src="/img/leftPaper.gif" style="display: none;"/>
+    <img id="leftRock" src="/img/leftRock.gif" style="display:none;"/>
+    <img id="leftScissors" src="/img/leftScissors.gif" style="display:none;"/>
+
+    <div class="choices">
+      <button id="rock">ROCK</button>
+      <button id="paper">PAPER</button>
+      <button id="scissors">SCISSORS</button>
+    </div>
+
+  </div>
+
+
+  <div class="right">
+
+    <img id="rightPaper" src="/img/rightPaper.gif" style="display:none;"/>
+    <img id="rightRock" src="/img/rightRock.gif" style="display:none;"/>
+    <img id="rightScissors" src="/img/rightScissors.gif" style="display:none;"/>
+
+  </div>
+
+</div>
 
 </body>
 
