Hide rock paper scissors choices

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 
   <div class="left"> 
-    <img id="choices" src="/img/choices.png"/>
+    <img id="choices" src="/img/choices.png" style="display: none;">
     <img id="leftPaper" src="/img/leftPaper.gif" style="display: none;"/>
     <img id="leftRock" src="/img/leftRock.gif" style="display:none;"/>
     <img id="leftScissors" src="/img/leftScissors.gif" style="display:none;"/>
