--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
 <div class="container">
 
   <div class="left"> 
-    <img id="choices" src="/img/choices.png" style="display: none;">
-    <img id="leftPaper" src="/img/leftPaper.gif" style="display: none;"/>
-    <img id="leftRock" src="/img/leftRock.gif" style="display:none;"/>
-    <img id="leftScissors" src="/img/leftScissors.gif" style="display:none;"/>
+
+    <div class="playerScore">Player: </div>
+
+    <div class="animations">
+      <img id="choices" src="/img/choices.png" style="display: none;">
+      <img id="leftPaper" src="/img/leftPaper.gif" style="display: ;"/>
+      <img id="leftRock" src="/img/leftRock.gif" style="display:none;"/>
+      <img id="leftScissors" src="/img/leftScissors.gif" style="display:none;"/>
+    </div>
 
     <div class="choices">
       <button id="rock">ROCK</button>
-      <button id="paper">PAPER</button>
       <button id="scissors">SCISSORS</button>
+      <button id="paper">PAPER</button>
     </div>
 
   </div>
@@ -30,11 +35,15 @@
 
   <div class="right">
 
-    <img id="rightPaper" src="/img/rightPaper.gif" style="display:none;"/>
-    <img id="rightRock" src="/img/rightRock.gif" style="display:none;"/>
-    <img id="rightScissors" src="/img/rightScissors.gif" style="display:none;"/>
+    <div class="computerScore"> Computer: </div>
 
-  </div>
+    <div class="animations">
+      <img id="rightPaper" src="/img/rightPaper.gif" style="display:;"/>
+      <img id="rightRock" src="/img/rightRock.gif" style="display:none;"/>
+      <img id="rightScissors" src="/img/rightScissors.gif" style="display:none;"/>
+    </div>
+ 
+</div>
 
 </div>
 
