--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="score" id="playerScore">Player: 0</p>
 
       <div class="animations">
-        <img id="playerWeapons" src="/img/choices.png"/>
+        <img id="playerWeapons" src="img/choices.png"/>
       </div>
 
       <div class="choices">
