Fix image source path and add alt text
Remove "/" at the front of image source path.

Add alt text description  for all images.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="score" id="playerScore">Player: 0</p>
 
       <div class="animations">
-        <img id="playerWeapons" src="img/choices.png"/>
+        <img id="playerWeapons" src="img/choices.png" alt="three pixel hands showing rock, scissors, paper"/>
       </div>
 
       <div class="choices">
@@ -39,7 +39,7 @@
         <p class="score" id="computerScore">Computer: 0</p>
 
         <div class="animations">
-          <img id="computerWeapons" src="/img/computerPicks.png"/>
+          <img id="computerWeapons" src="img/computerPicks.png" alt="three pixel question marks"/>
         </div>
     
       </div>
